add some notes about rmq

--- a/queue/Что такое RabbitMQ.org
+++ b/queue/Что такое RabbitMQ.org
@@ -34,6 +34,65 @@ RabbitMQ основан на протоколе AMQP (Advanced Message Queuing P
 В конечном счёте, каждая очередь подключается к консьюмеру, которое читает эти сообщения и выполняет их дальнейшую обработку.
 Среди прочих свойств, RabbitMQ часто приписывают свойство «проталкивать» сообщения потребителю. Для этого потребителю необходимо установить соединение, в рамках которого открывается канал взаимодействия и осуществляется транспортировка сообщений. Потребитель должен быть подписан на текущую очередь — это необходимое условие для доставки из неё.
 
+* Базовая схема всех сущностей RabbitMQ
+[[file:./pic/1.png]]
+
+Пробежимся по названиям слева направо:
+ - =Publisher= — публикует сообщения в Rabbit.
+   Создаёт соединение (connection) по протоколу AMQP, в рамках соединения создаёт канал (channel).
+   В рамках одного соединения можно создать несколько каналов, но это не рекомендуется даже официальной документацией RabbitMQ.
+   «Флаппинг» каналов: если Publisher для каждого сообщения создаёт соединение, канал, отправляет сообщение, закрывает канал, закрывает соединение, это очень плохая история. Rabbit становится плохо уже на ~300 таких пересозданий каналов в секунду.
+   Publisher всегда пишет в exchange. Даже если вы думаете, что он пишет напрямую в очередь, это не так. Он пишет в служебный exchange с routing key, совпадающим с названием очереди.
+   Publisher определяет Routing Key для каждого сообщения — признак, по которому идёт дальнейшая маршрутизация в Rabbit.
+   Publisher определяет ~delivery_mode~ для каждого сообщения — так называемый «признак персистентности». Это значит, что сообщение будет сохранено на диске и не исчезнет в случае перезагрузки Rabbit.
+   - delivery_mode=1 — не хранить сообщения, быстрее.
+   - delivery_mode=2 — хранить сообщения на диске, медленнее, но надёжнее.
+   Publisher может выставлять ~confirm~ флаг — отправлять указания Rabbitmq через отдельный канал подтверждения об успешной приёмке сообщений. Например, если у Rabbit закончится место на диске, то некоторое время он ещё будет принимать сообщения от Publisher. Publisher будет думать, что всё в порядке, хотя сообщения с высокой долей вероятности не дойдут до Consumer и не сохранятся в очереди для дальнейшей обработки. Полезная вещь, но ощутимо снижает скорость работы и сложно реализуема в однопоточных языках разработки.
+ - =Exchange= — обменник. Сущность Rabbit, точка входа для публикации всех сообщений.
+   *Неизменяемая сущность*: для изменения параметров Exchange нужно его удалять и декларировать заново.
+   Рассылает сообщение во все очереди с подходящими binding (но не более одного сообщения в одну очередь, если есть несколько подходящих binding).
+   Durable/Transient — признак персистентности Exchange. Durable означает, что exchange сохранится после перезагрузки Rabbit.
+   Exchange не подразумевает хранения! Это не очередь. Если маршрут для сообщения не будет найден, сообщение сразу будет отброшено без возможности его восстановления.
+ - =Binding= — связь между Exchange и очередью.
+   *Неизменяемая сущность*: если нужно изменить binding, его удаляют и декларируют заново.
+   Bindings между парой exchange-очередь может быть несколько, но только с разными параметрами.
+ - =Queue= — очередь для хранения сообщений.
+   Хранение сообщений на диске (persistent) зависит от флага ~delivery_mode~, назначаемым publisher для каждого сообщения.
+   Durable/Transient — признак персистентности очереди. Durable значит, что exchange сохранится после перезагрузки Rabbit.
+   ~Важно~ понимать, что даже если вы отправили сообщения с признаком delivery_mode=2 (persistent), но очередь задекларирована не как Durable, то при перезагрузке Rabbit очередь и все содержащиеся в ней сообщения будут безвозвратно утрачены.
+ - =Messages= — сообщение, атомарная сущность.
+   Важные поля:
+   - ~payload~ — полезная нагрузка, может быть как string, так и base64. Можно закидывать туда хоть картинки, но потом не надо удивляться огромным трафикам между сервисами. Теоретический лимит размера одного сообщения — 2Gb, но на практике рекомендуемый размер сообщения 128mb;
+   - ~routing key~ — ключ маршрутизации, может быть только один для одного сообщения;
+   - ~delivery_mode~ — признак персистентности;
+   - ~headers~ — заголовки сообщения. Нужны для работы Exchange типа headers, а также для дополнительных возможностей Rabbit типа TTL.
+ - =Consumer= — подписывается на очередь и получает от Rabbit сообщения.
+    Так же, как и Publisher, Consumer создаёт соединение (connection) по протоколу AMQP. В рамках соединения создаёт канал (channel) и уже инициирует consuming в рамках этого канала.
+
+Типы Exchange:
+- =Fanout=
+  Exchange публикует сообщения во все очереди, в которых есть binding, игнорируя любые настройки binding (routing key или заголовки).
+  Самый простой тип и наименее функциональный. ~Редко бывает нужен~. По скоростям выдает на тестах около 30000mps, но столько же выдает и тип Direct.
+- =Direct=
+  Exchange публикует сообщения во все очереди, в которых Routing Key binding полностью совпадает с Routing Key Messages.
+  Наиболее популярный тип, по скорости сравнимый с fanout (на тестах не увидел разницы) и при этом обладающий необходимой гибкостью для большинства задач.
+- =Topic=
+  Тип Exchange, похожий на Direct, но поддерживающий в качестве параметров binding Wildcard * (совпадение одного слова ) и # (любое количество слов).
+  Производительность топика на тестах показала скорости в три раза ниже fanaut/direct — не более 5000-10000mps
+- =Headers=
+  Наиболее гибкий, но наименее производительный тип. Скорости очень сильно зависят от сложности условий и поэтому труднопрогнозируемы. Оперирует не Routing key, а заголовками сообщений и binding. В binding указываются ожидаемые заголовки, а также признак x-match: x-match=all (необходимы все совпадения для попадания сообщения) или x-match=any (необходимо хотя бы одно совпадение).
+
+Типы очередей:
+- =Classic= — обычная очередь, используется в большинстве случаев.
+- =Quorum= — аналог классической очереди, но с обеспечением гарантий консистентности, достигаемый кворумом в кластере.
+- =Stream= — новый вид очередей (начиная с версии Rabbimq 3.9), пока ещё мало кем используемый, аналог принципов Apache Kafka.
+
+Также встречаются термины:
+- =Publishing= — процесс публикования сообщений в обменник.
+- =Consuming= — процесс подписывания consumer на очередь и получение им сообщений.
+- =Routing Key= — свойство Binding.
+- =Persistent= — свойство сохранения данных при перезагрузке сервиса (также известное как стейт).
+
 * Очереди
 В RabbitMQ они работают по принципу FIFO (First Input First Output). При конфигурации очереди можно задавать как обязательные, так и необязательные параметры. Каждая очередь должна иметь уникальное имя и свойства, которые будут определять её поведение.
 Помимо имени в административной панели RabbitMQ можно установить параметр свойства «Durable» (устойчивость) — это свойство определяет, сохранится ли очередь после перезапуска брокера. Для того, чтобы очередь была устойчива к сбоям брокера, этот параметр должен иметь значение «True».
