--- a/queue/Что такое RabbitMQ.org
+++ b/queue/Что такое RabbitMQ.org
@@ -57,6 +57,7 @@ RabbitMQ основан на протоколе AMQP (Advanced Message Queuing P
    *Неизменяемая сущность*: если нужно изменить binding, его удаляют и декларируют заново.
    Bindings между парой exchange-очередь может быть несколько, но только с разными параметрами.
  - =Queue= — очередь для хранения сообщений.
+   В RabbitMQ они работают по принципу FIFO (First Input First Output).
    Хранение сообщений на диске (persistent) зависит от флага ~delivery_mode~, назначаемым publisher для каждого сообщения.
    Durable/Transient — признак персистентности очереди. Durable значит, что exchange сохранится после перезагрузки Rabbit.
    ~Важно~ понимать, что даже если вы отправили сообщения с признаком delivery_mode=2 (persistent), но очередь задекларирована не как Durable, то при перезагрузке Rabbit очередь и все содержащиеся в ней сообщения будут безвозвратно утрачены.
@@ -68,6 +69,10 @@ RabbitMQ основан на протоколе AMQP (Advanced Message Queuing P
    - ~headers~ — заголовки сообщения. Нужны для работы Exchange типа headers, а также для дополнительных возможностей Rabbit типа TTL.
  - =Consumer= — подписывается на очередь и получает от Rabbit сообщения.
     Так же, как и Publisher, Consumer создаёт соединение (connection) по протоколу AMQP. В рамках соединения создаёт канал (channel) и уже инициирует consuming в рамках этого канала.
+    Consumer подписывается только на одну очередь. Если вы хотите получать сообщения из разных очередей, правильнее будет корректно смаршрутизировать их потоки в одну очередь, чем городить пулы Consumer внутри приложения.
+    ~Prefetch count~ — важный параметр Consumer, обозначающий количество неподтверждённых Consumer сообщений в один момент. По умолчанию во многих библиотеках он равен 0 (по сути отключен). В такой ситуации Rabbit проталкивает все сообщения из очереди в Consumer, а тот во многих случаях при достаточном количестве сообщений просто отъезжает.
+    Если нет понимания, какое значение ставить, лучше ставить «1» — пока Consumer не обработает одно сообщение, следующее к нему не поступит. Как только Rabbit подтвердит обработку, следующее сообщение будет получено незамедлительно.
+    Consumer может подтвердить обработку сообщения — механизм Acknowledge (ack). Или вернуть сообщение в Queue при неудачной обработке — механизм Negative acknowledge (nack).
 
 Типы Exchange:
 - =Fanout=
@@ -92,32 +97,6 @@ RabbitMQ основан на протоколе AMQP (Advanced Message Queuing P
 - =Consuming= — процесс подписывания consumer на очередь и получение им сообщений.
 - =Routing Key= — свойство Binding.
 - =Persistent= — свойство сохранения данных при перезагрузке сервиса (также известное как стейт).
-
-* Очереди
-В RabbitMQ они работают по принципу FIFO (First Input First Output). При конфигурации очереди можно задавать как обязательные, так и необязательные параметры. Каждая очередь должна иметь уникальное имя и свойства, которые будут определять её поведение.
-Помимо имени в административной панели RabbitMQ можно установить параметр свойства «Durable» (устойчивость) — это свойство определяет, сохранится ли очередь после перезапуска брокера. Для того, чтобы очередь была устойчива к сбоям брокера, этот параметр должен иметь значение «True».
-Ещё одно важное свойство «Auto delete» (автоудаление). Оно означает, что как только последний потребитель заканчивает читать сообщения из очереди, она удаляется.
-
-* Точка обмена
-Следующий объект брокера — точка обмена или обменник (Exchange). Все сообщения RabbitMQ, прежде чем попасть в очереди, публикуются в точке обмена брокера. Exchange принимает сообщения от приложения-производителя и направляет их в одну или несколько очередей на основе созданных связей между ним и очередью. В спецификации протокола AMQP, по которому работает RabbitMQ, существует несколько типов точек обмена, каждый со своей собственной семантикой маршрутизации.
-
-Типы точек обмена:
-1. Direct - Прямая отправка сообщений в одну или несколько очередей с совпадающим значением ключа маршрутизации. Когда есть точно известный ключ, по значению которого отдельные приложения-потребители должны получить подходящие сообщения
-2. Fanout - Все сообщения отправляются во все очереди независимо от ключа маршрутизации. Когда все приложения-потребители должны быстро получать все сообщения.
-3. Headers - Маршрутизация по нескольким атрибутам, заданным в заголовке сообщения. Ключ маршрутизации игнорируется. Когда правила маршрутизации сообщения в очереди сложнее, чем просто по ключу, например, формат данных, комбинация полей и пр.
-4. Topic - Сообщение отправляется в конкретные очереди по значению ключа маршрутизации, заданного по шаблону. Когда ключ маршрутизации сложный и поток сообщений надо разделить по разным приложениям-потребителям.
-
-* Сообщения
-В структуре Сообщения можно выделить три основных блока:
-- Attributes — заголовок;
-- Payload — блок полезной нагрузки;
-- Headers — заголовки сообщения, блок дополнительных атрибутов, участвующих в построении логики обработки и маршрутизации в топологиях брокера.
-
-  Атрибуты сообщения:
-1. Routing key — ключ маршрутизации, обязательная характеристика, которая позволяет обменнику типа Direct или Topic направить сообщение в очередь внутри брокера.
-2. Headers — содержит дополнительную информацию для сложной маршрутизации и используется обменником типа Headers. Иногда может быть нужно выполнить маршрутизацию в зависимости от одного какого-то ключа. Чаще можно столкнуться с необходимостью выполнить проверку нескольких условий. Эти условия можно указать как атрибуты в поле заголовка (Headers) и затем использовать их в брокере для более сложной маршрутизации.
-3. Properties — характеристики сообщений, наиболее важными из них являются тип (Content_type) и кодировка (Content_encoding).
-4. Delivery mode — режим доставки, сохранение опубликованных сообщений до момента их передачи потребителю. Выделяют две разновидности режима доставки: Persistent — постоянная, то есть сохранение сообщений; Non-persistent — непостоянная, несохранение сообщений.
 
 * Запуск RabbitMQ через Docker
 Выполните следующую команду в терминале:
