add new notes for job

--- a/вакансии.org
+++ b/вакансии.org
@@ -59,3 +59,33 @@ https://career.habr.com/
 -Если хочешь делиться своим опытом, мы только за — поможем с выступлениями на конференциях и статьями для Хабра.
 -Есть собственный учебный центр: курсы, тренинги и книги для прокачки скиллов.
 Контакты: job@2gis.ru
+
+* Golang разработчик (S3)
+окация: Москва
+Компания: Сбер
+- Обязанности
+-Разработка компонент S3-совместимого объектного хранилища на языке
+-Go Написание тестов (функциональных и нагрузочных) Code review
+
+- Требования
+-Практический опыт разработки на Go или опыт написания системного кода на C/C++ с желанием писать на Go
+-Опыт разработки многопоточных приложений
+-Опыт проектирования и разработки gRPC/REST API
+-Опыт разработки сетевых приложений и понимание стека TCP/IP
+-Уверенный пользователь Linux (работа с файлами, ssh, systemctl) Коммуникабельность и общительность.
+Приветствуются:
+Понимание особенностей построения современных высокодоступных систем Практический опыт использования алгоритмов распределенного консенсуса (Raft, Paxos и др.)
+Опыт разработки распределенных систем и представление о схемах репликации и шардирования
+Работа с асинхронными, многопоточными и неблокирующими алгоритмами и структурами данных
+Опыт системного программирования и низкоуровневой работы с Linux Стэк: Golang, NBD, Linux, SDS, S3.
+
+- Условия
+-Гибридный формат работы
+-Годовой бонус и ежегодный пересмотр зарплаты
+-Статус аккредитованной ИТ-компании со всеми преимуществами
+-Расширенный ДМС с первого дня и льготное страхование для семьи
+-Корпоративный университет Сбера, внутренняя образовательная платформа, участие в IT-конференциях
+-Офис с видом на набережную, зонами отдыха и спортзалом
+-90 дней удаленной работы из любого региона
+Льготная ипотека в Сбере, подписка СберПрайм+, скидки от партнеров и сервисов группы компаний.
+Контакты: https://rabota.sber.ru/search/4388814/
