--- a/План.md
+++ b/План.md
@@ -8,4 +8,13 @@
 21. postrgess
 Clickhouse
 SRE: ELK, Kibana, Grafana, Prometheus, Victoria Metrics; 
-
+MVCC, 
+Проблема разбухания индексов, 
+Селективность, 
+Шардирование на уровне реальных решений основной проблемы решардинга — Consistent Hash, 
+Реприликация и паттерн Raft.  
+паттерны межсервисного взаимодействия: Saga, Transactional Outbox, Circuit Breaker
+рефлексия в go
+собирать функциональные и нефункциональные требования, считать нагрузку, проектировать на разных уровнях абстракции, углубляться и решать проблемы в своей же архитектуре. 
+ClickHouse
+ElasticSearch
