modified some pics

--- a/IT/REST API design.org
+++ b/IT/REST API design.org
@@ -1,65 +1,50 @@
-# Как проектировать REST API: полезные советы для разработчика
+#+title: Как проектировать REST API: полезные советы для разработчика
 
-![[photo_2024-07-11_01-35-33.jpg]]
-
+#+ATTR_ORG: :width 700 :align left
+[[file:./pic/2.png]]
 
 1. Используйте существительные во множественном числе для обозначения коллекций.
-```
-#Хорошо
+=Хорошо=
 GET /products         
-GET /products/{product_id} 
-
-#Плохо
+GET /products/{product_id}
+Плохо
 GET /product/{product_id}
-```
 
 2. Не добавляйте ненужные пути в структуру URL-адресов.
-```
-# Хорошо
+=Хорошо=
 GET /v3/application/listings/{listing_id}
-
-# Плохо
+Плохо
 PATCH /v3/application/shops/{shop_id}/listings/{listing_id}
-```
 
 3. Не добавляйте `.json` или другие расширения к URL-адресу.
 
 4. Не возвращайте массивы в качестве ответов верхнего уровня от эндпоинтов. Верхний уровень ответа должен быть объектом, а не массивом, чтобы обеспечить обратную совместимость и возможность добавления пагинации.
-```
-# Хорошо
+=Хорошо=
 GET /things returns:
 { "data": [{ ...thing1...}, { ...thing2...}] }
-
-# Плохо
+Плохо
 GET /things returns:
 [{ ...thing1...}, { ...thing2...}]
-```
 
 5. Не возвращайте структуры map. Вместо этого используйте массивы объектов, чтобы избежать проблем при работе с типизированными языками и не усложнять обработку данных.
-```
-# Хорошо
+=Хорошо=
 GET /things returns:
 {
     "data": [
         { "id": "KEY3", "foo": "bat" }
     ]   
 }
-
-# Плохо
+Плохо
 GET /things returns:
 {
     "KEY3": { "id": "KEY3", "foo": "bat" }
 }
-```
 
 6. Используйте строки для всех идентификаторов.
-```
-# Хорошо
+=Хорошо=
 { "id": "123" }
-
-# Плохо
+Плохо
 { "id": 123 }
-```
 
 7. Добавляйте префиксы к идентификаторам. Это улучшает читаемость API и помогает различать разные типы идентификаторов.
 
