--- a/IT/8 ключевых проблем в проектировании систем и их решения.org
+++ b/IT/8 ключевых проблем в проектировании систем и их решения.org
@@ -1,6 +1,6 @@
 #+title: 8 Ключевых Проблем В Проектировании Систем И Их Решения
 
-#+ATTR_ORG: :width 500 :height 500 :align left
+#+ATTR_ORG: :width 500 :align left
 [[file:./pic/1.png]]
 
 1. Частые чтения → Используйте кэширование
