--- a/вакансии.org
+++ b/вакансии.org
@@ -89,3 +89,76 @@ https://career.habr.com/
 -90 дней удаленной работы из любого региона
 Льготная ипотека в Сбере, подписка СберПрайм+, скидки от партнеров и сервисов группы компаний.
 Контакты: https://rabota.sber.ru/search/4388814/
+
+* Разработчик Go (Middle+ / Senior)
+Компания: Солар
+Мы в поисках талантливого и мотивированного Разработчика Go, который готов присоединиться к нашей команде и внести свой вклад в создание инновационного решения в области кибербезопасности. Если ты стремишься к разработке надежных и эффективных систем, а также хочешь работать в команде единомышленников, тогда это твой шанс! Вместе мы сможем реализовать высокотехнологичный продукт, который сделает мир безопаснее.
+
+Что нужно будет делать:
+Писать новые и развивать существующие сервисы на Go;
+Участвовать в анализе, проектировании и оценке технических решений вместе с командой;
+Писать unit и функциональные тесты;
+Участвовать в code review.
+Что мы ожидаем:
+опыт коммерческой разработки бэкенда на Golang от 4 лет;
+опыт работы с SQL базами данных (на уровне join-ов, оптимизации запросов);
+умение проектировать высоконагруженные сервисы;
+опыт работы с нереляционными базами данных;
+опыт работы с Docker, k8s и Git;
+опыт работы с брокерами сообщений.
+Мы предлагаем:
+Официальное оформление в аккредитованную ИТ-компанию со всеми льготами (ипотека, отсрочка и тп);
+Конкурентный оклад, премии по результатам работы;
+Сильная команда экспертов, которые всегда готовы помочь и поделиться знаниями;
+Возможность работать над передовыми продуктами в сфере кибербезопасности;
+Перспективы для профессионального и карьерного продвижения;
+Корпоративные мероприятия, путешествия, спортивные активности онлайн и оффлайн (онлайн-марафоны, бег, йога, волейбол, лыжи, и др.);
+Социальный пакет:
+ДМС со стоматологией в лучших клиниках России, возможность подключить родственников по корпоративным ценам;
+Доплата больничных до 100% от оклада (28 дней в году), 10 оплачиваемых day-off на случай форс-мажора;
+Возможность бесплатного обучения: внешние обучения, профильные конференции, а также наши внутренние курсы и электронная корпоративная библиотека с сотнями книг;
+Скидки от компаний-партнеров: спорт, английский, психолог, интернет и многое другое;
+Материальная помощь при важных событиях в жизни (заключение брака, рождение детей и другое);
+Удаленный формат работы в пределах РФ, либо современный офис рядом с м.Охотный ряд/Савёловская;
+График работы: 5/2 с 9:00 до 17:30, либо с 10:00 до 18:30.
+
+* Golang developer/Go-разработчик
+#офис #400k
+Опыт работы: 3–6 лет
+Локация: Санкт-Петербург
+Компания: ООО Реддиджитал
+ЗП: от 250 000 до 400 000 ₽
+🔷Обязанности:
+-Разработка кода на GoLang
+-Участие в проработке архитектуры продукта
+-Решение сложных технических задач, возникающих в ходе реализации продукта
+-Рефакторинг и оптимизация кода
+-Борьба за миллисекунды
+
+🔷Требования:
+-Опыт построения микросервисной архитектуры
+-Опыт работы с многопоточностью
+-Знание алгоритмов
+-Знание языков программирования: GoLang, SQL
+-Опыт работы с брокерами-сообщений
+-Понимание процесса CI/CD
+-Понимание процесса тестирования продукта
+-Опыт применения гибкой методологии разработки
+-Хорошие коммуникационные навыки
+Будет плюсом:
+-Опыт в разработке высоконагруженных продуктов
+-Опыт в разработке продуктов для Digital Рекламы
+-Опыт работы с NoSQL (Redis, MongoDB, ElasticSearch, Memcached)
+-Опыт работы с БД ClickHouse
+-Опыт работы с БД Aerospike
+-Опыт работы с Docker и Kubernetes
+-Базовые знания Python/R + опыт/понимание анализа данных
+
+🔷Условия:
+-Официальное оформление в аккредитованную IT компанию
+-Комфортная офисная работа 5/2 в БЦ Сенатор (массажное кресло, кофе, чай, печеньки, всё для завтрака)
+-Формат работы - офис, 5/2, плавающие начало и окончание рабочего дня
+-ДМС после испытательного срока
+-Бонусы по итогам работы
+-Насыщенная корпоративная жизнь
+Контакты: hr@reddigital.video
