--- a/вакансии.org
+++ b/вакансии.org
@@ -162,3 +162,44 @@ https://career.habr.com/
 -Бонусы по итогам работы
 -Насыщенная корпоративная жизнь
 Контакты: hr@reddigital.video
+
+* Golang-разработчик
+#удаленкарф #senior #500k
+Компания: Точка
+ЗП: до 520 000₽
+🔷Что делать
+— Разрабатывать клиентский и интеграционный API для интернет-банка: создавать документы, подписывать их и другие возможности.
+— Развивать и поддерживать сервисы для документооборота, такие как работа с криптографией и создание печатных форм.
+— Развивать электронный документооборот как инфраструктурный SaaS-сервис, которым могут пользоваться другие команды Точки.
+— Создавать платформу по взаимодействию Точки с другими операторами электронного документооборота в России.
+— Участвовать в запуске новых сервисов, в том числе выходящих за рамки платформы интернет-банка.
+— Работать вместе с продакт-менеджером и системным аналитиком над продуктовыми планами: проверять требования, проектировать архитектуру для сложных бизнес-задач, следить за качеством и поддерживаемостью кода.
+— Участвовать в двухнедельных дежурствах вместе с командой Сопровождения. Продуктовых задач не будет, нужно выступать как третья линия поддержки для разбора и устранения сложных ситуаций и ошибок в работе сервисов.
+— Предлагать улучшения и автоматизации админки и тулинга для решения типовых проблем.
+
+🔷Наш стек
+— У нас микросервисная архитектура.
+— Используем Golang 1.22
+— Храним данные в PostgreSQL.
+— Реализуем асинхронное взаимодействие на RabbitMQ.
+— Используем TeamCity, GitLab для CI/CD.
+— Разворачиваем сервисы в Docker.
+— Проводим мониторинг на Prometheus, Grafana, Sentry.
+— Заботимся о качестве кода: проводим ревью, всё покрываем тестами и даём обратную связь.
+— Используем Agile, SCRUM и OKR.
+
+🔷Ты подойдёшь, если
+— Есть опыт коммерческой разработки на Golang от 3 лет.
+— Умеешь писать читаемый код.
+— Знаешь, как работать с реляционными базами данных.
+— Знаешь Git, CI и CD.
+— Можешь работать с Docker, виртуализацией, контейнеризацией.
+— Есть опыт работы с очередями.
+— Можешь самостоятельно организовать работу и выполнять задачи без постоянного контроля.
+— Легко находишь общий язык с людьми и умеешь понятно объяснять сложные вещи.
+
+🔷Будет плюсом
+— Опыт управления командой, декомпозиции задач для новых проектов и развития продукта.
+— Опыт работы в доменной области электронного документооборота в РФ.
+— Умеешь выстраивать архитектуру нагруженных систем и оптимизации больших баз данных.
+Контакты: ‍https://tochka.com/hr/it/golang-developer/
