remove some todos

--- a/вакансии.org
+++ b/вакансии.org
@@ -203,3 +203,50 @@ https://career.habr.com/
 — Опыт работы в доменной области электронного документооборота в РФ.
 — Умеешь выстраивать архитектуру нагруженных систем и оптимизации больших баз данных.
 Контакты: ‍https://tochka.com/hr/it/golang-developer/
+
+* Senior GO разработчик
+#удаленка #senior #400k
+Опыт работы: более 6 лет
+Компания: Hi, Rockits!
+ЗП: от 400 000 ₽
+🔷Чем предстоит заниматься:
+-Проектирование архитектуры и сервисов для приложений B2C и B2B
+-Обеспечение отказоустойчивости разработанных сервисов в среде Digital Ocean
+-Разработка и улучшение бэкэнд-сервисов для поддержки роста торговой платформы
+-Создание сервиса с высоким трафиком и большим количеством пользователей и объектов взаимодействия
+-Участие в обсуждениях новых функций и разработки продукта
+Go: 1.18+
+Logging: zero log, slog
+Работать с БД: PostgreSQL, Clickhouse; Redis; GORM
+
+🔷Вы точно подойдете на эту вакансию, если имеете:
+-Опыт работы в DeFi
+-Более пяти лет опыта коммерческого программирования на Go
+-Опыт работы с горутинами и их отладки
+-Опыт написания модульных и интеграционных тестов
+-Понимание архитектуры микросервисов
+-Опыт разработки с API REST и API gRPC
+-Опыт работы с брокерами: Kafka, NATS или похожими
+-Опыт работы с системой контроля версий Git
+-Опыт и понимание принципов CI/CD
+-Понимание контейнеризации, виртуализации и технологий Serverless
+-Знакомство с системами управления облаком (инструментарий, предоставление, выставление счетов и квоты)
+-Опыт написания скриптов с Bash, Python, Gotemplate
+-Опыт автоматизации развертывания инфраструктуры с использованием одного или нескольких инструментов (Ansible, Terraform, Pulumi)
+-Опыт работы с системами мониторинга, такими как Zabbix, Prometheus и другими
+
+🔷Что предлагает компания:
+-отсутствие привязки к локации, можно работать из любой точки мира
+-оформление любым удобным способом (в том числе можно и по ТК РФ)
+-широкая вилка выше рынка
+-профессиональное развитие в highload и web3 пространствах
+годовые бонусы и акции на основе производительности и достигнутых результатов
+
+🔷Как будет выглядеть процесс коммуникации:
+1. Встреча с рекрутером на 15 минут
+2. Лайвкодинг
+3. Техническое интервью в формате диалога с разработчиком — 1,5 часа
+*при необходимости дополнительная встреча с разработчиком
+4. Интервью на soft skills с руководителем разработки — 1 час
+Оффер!
+Контакты: jukislitsyna@rockits.ru
