--- a/вакансии.org
+++ b/вакансии.org
@@ -250,3 +250,32 @@ Logging: zero log, slog
 4. Интервью на soft skills с руководителем разработки — 1 час
 Оффер!
 Контакты: jukislitsyna@rockits.ru
+
+* Senior Go developer (Data Processing & File Storage Development)
+#офис #senior
+Компания: Kaspersky
+🔷Обязанности
+-Разработка, поддержка и мониторинг распределённых систем обработки данных.
+-Разработка интеграционных и юнит-тестов.
+-Анализ требований, участие в разработке планов и оценке реализации.
+-Активное участие в выборе и проработке технологий.
+-Проведение кодревью.
+
+🔷Требования:
+-Опыт программирования на Go.
+-Понимание принципов ООП.
+-Опыт разработки распределённых систем обработки информации: работа с БД, кэшами, очередями.
+-Опыт работы с git.
+-Понимание методик юнит-тестирования.
+-Опыт работы с Linux на уровне опытного пользователя.
+-Знание основ сетей.
+
+🔷Будет плюсом:
+-Знание или опыт работы с C/C++, Python, Java, Scala.
+-Опыт работы с большими данными и нагрузками, понимание связанных с этим проблем и умение их решать.
+-Опыт работы с любым из инструментов обработки данных: Spark, Hadoop, Kudu, Kafka, Airflow.
+-Опыт с NoSQL решениями: Elasticsearch, Redis, ScyllaDB.
+-Опыт построения вычислительных кластеров на базе Mesos/Kubernetes/и т.д.
+-Опыт с deploy инструментами Ansible/Puppet/Chef, Docker и т.д.
+-Понимание основ информационной безопасности.
+Контакты: https://careers.kaspersky.ru/vacancy/22887
