--- a/План.md
+++ b/План.md
@@ -17,3 +17,4 @@ MVCC,
 рефлексия в go
 собирать функциональные и нефункциональные требования, считать нагрузку, проектировать на разных уровнях абстракции, углубляться и решать проблемы в своей же архитектуре. 
 ElasticSearch
+jwt-токены
