add some plan notes

--- a/План.md
+++ b/План.md
@@ -18,3 +18,5 @@ MVCC,
 собирать функциональные и нефункциональные требования, считать нагрузку, проектировать на разных уровнях абстракции, углубляться и решать проблемы в своей же архитектуре. 
 ElasticSearch
 jwt-токены
+nats - брокер сообщений
+grpc
