--- a/queue/Что такое RabbitMQ.org
+++ b/queue/Что такое RabbitMQ.org
@@ -198,3 +198,117 @@ docker-compose down
 #+begin_src
 docker volume rm $(docker volume ls -q -f name=rabbitmq_data)
 #+end_src
+
+* Пример отправки сообщений
+#+begin_src go
+package main
+
+import (
+	"time"
+
+	"github.com/streadway/amqp"
+)
+
+func main() {
+	// Подключение к RabbitMQ
+	conn, err := amqp.Dial("amqp://guest:guest@localhost:5672/")
+	if err != nil {
+		panic(err)
+	}
+	defer conn.Close()
+
+	// Создание канала
+	ch, err := conn.Channel()
+	if err != nil {
+		panic(err)
+	}
+	defer ch.Close()
+
+	// Объявление очереди (если она не существует)
+	queryName := "qname"
+	_, err = ch.QueueDeclare(
+		queryName, // имя очереди
+		true,  // durable (очередь сохраняется после перезапуска RabbitMQ)
+		false, // delete when unused
+		false, // exclusive
+		false, // no-wait
+		nil)
+
+	if err != nil {
+		panic(err)
+	}
+
+	err = ch.Publish(
+		"", // exchange
+		queryName, // routing key (имя очереди)
+		false, // mandatory
+		false, // immediate
+		amqp.Publishing{ContentType: "text/plain",
+			DeliveryMode: amqp.Persistent,
+			Body:         []byte("hello hello")})
+
+	if err != nil {
+		panic(err)
+	}
+
+	time.Sleep(2 * time.Second)
+}
+#+end_src
+
+* Пример потребления сообщений
+#+begin_src go
+package main
+
+import (
+	"context"
+	"log"
+	"time"
+
+	"github.com/streadway/amqp"
+)
+
+func main() {
+	conn, err := amqp.Dial("amqp://guest:guest@localhost:5672/")
+	if err != nil {
+		panic(err)
+	}
+	defer conn.Close()
+
+	ch, err := conn.Channel()
+	if err != nil {
+		panic(err)
+	}
+	defer ch.Close()
+
+	queryName := "qname"
+	msgs, err := ch.Consume(
+		queryName, // имя очереди
+		"",        // consumer tag
+		true,      // auto-ack
+		false,     // exclusive
+		false,     // no-local
+		false,     // no-wait
+		nil,       // args
+	)
+
+	if err != nil {
+		panic(err)
+	}
+
+	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
+	defer cancel()
+	go func(ctx context.Context) {
+		for msg := range msgs {
+			select {
+			case <-ctx.Done():
+				log.Print("finish.")
+				return
+			default:
+				log.Printf("message: %s", msg.Body)
+			}
+		}
+	}(ctx)
+
+	time.Sleep(4 * time.Second)
+}
+#+end_src
