add index bloat note

--- a/План.md
+++ b/План.md
@@ -1,17 +1,22 @@
-6. Профилирование
-10. Флаги тестов, тестовые тэги, 
-11. фаззинг
-14. L3, L7 балансеры, 
-15. кубер
-16. Монго
-19. Кафка
-21. postrgess
-Clickhouse
-MVCC, 
-Проблема разбухания индексов, 
-паттерны межсервисного взаимодействия: Saga, Transactional Outbox, Circuit Breaker
+go
+Профилирование
+Флаги тестов, тестовые тэги, 
+фаззинг
 рефлексия в go
-ElasticSearch
-jwt-токены
-nats - брокер сообщений
 grpc
+бот
+ebiten
+
+micro
+L3, L7 балансеры, 
+кубер
+Кафка
+паттерны межсервисного взаимодействия: Saga, Transactional Outbox, Circuit Breaker
+ElasticSearch
+nats - брокер сообщений
+
+DB
+Монго
+postrgess
+Clickhouse
+MVCC 
