clean up folders

--- a/План.md
+++ b/План.md
@@ -20,3 +20,90 @@ DB
 postrgess
 Clickhouse
 оконные функции
+
+
+# MongoDB
+MongoDB. Полный курс
+https://www.youtube.com/watch?v=sXcZQ5Zg-YM&ab_channel=webDev
+
+Использование Go с MongoDB с помощью драйвера Go MongoDB
+https://www.digitalocean.com/community/tutorials/how-to-use-go-with-mongodb-using-the-mongodb-go-driver-ru
+
+Взаимодействие с MongoDB посредством Go
+https://ocakhasan.github.io/golang-mongodb-query-examples/
+
+# tarantool
+https://www.tarantool.io/ru/doc/latest/
+Начинаем работать с Tarantool
+https://habr.com/ru/companies/first/articles/596301/
+
+Tarantool: СУБД с хранением в памяти и сервер приложений
+https://www.osp.ru/os/2017/02/13052224
+
+Использование Tarantool в .NET-проекте на Windows
+https://habr.com/ru/companies/vk/articles/321998/
+
+# PostgreSQL
+https://www.youtube.com/watch?v=gA3A_epB3So&ab_channel=Диджитализируй%21
+База по оптимизации PostgreSQL: схема, индексы, чтение EXPLAIN, методы доступа и соединения, тюнинг
+
+20+ нюансов PostgreSQL, о которых должен знать продвинутый бэкендер
+https://proglib.io/p/20-nyuansov-postgresql-o-kotoryh-dolzhen-znat-prodvinutyy-bekender-2025-02-17
+
+Архитектурные паттерны для высокой масштабируемости
+https://habr.com/ru/articles/871500/
+https://habr.com/ru/articles/871784/
+
+System Design для начинающих: всё, что вам нужно.
+https://habr.com/ru/articles/873388/
+https://habr.com/ru/articles/877312/
+
+Как не сломать продакшен: 8 основных паттернов распределенных систем
+https://proglib.io/p/kak-ne-slomat-prodakshen-8-osnovnyh-patternov-raspredelennyh-sistem-2025-02-10
+
+9 основных паттернов для проектирования распределенных систем
+https://proglib.io/p/9-osnovnyh-patternov-dlya-proektirovaniya-raspredelennyh-sistem-2024-07-30
+
+26 основных паттернов микросервисной разработки
+https://cloud.vk.com/blog/26-osnovnyh-patternov-mikroservisnoj-razrabotki/
+
+
+https://habr.com/ru/articles/770564/
+
+
+
+Как создать свой реестр для хостинга Docker-контейнеров
+https://proglib.io/p/kak-sozdat-svoy-reestr-dlya-hostinga-docker-konteynerov-2024-10-22
+https://my-js.org/docs/guide/docker/#рекомендации-по-инструкциям
+https://golang.withcodeexample.com/blog/go-app-deployment-docker-guide
+https://dev.to/jacktt/20x-faster-golang-docker-builds-289n
+https://dev.to/tusharops_29/docker-networking-basics-network-types-examples-5ed7
+https://helloabhii.hashnode.dev/containerizing-a-go-web-application-with-docker
+
+How to Deploy Go Applications With Docker
+https://dev.to/goodylili/how-to-deploy-go-applications-with-docker-50n3
+
+How to Containerize a Golang App With Docker for Development and Production
+https://bartlomiejmika.com/post/2022/how-to-containerize-a-golang-app-with-docker-for-development-and-production/
+
+
+
+kafka
+Apache Kafka урок 1. Зачем нужна, что это? 
+https://www.youtube.com/watch?v=DvXPKUUl38w
+https://habr.com/ru/articles/853652/
+https://habr.com/ru/companies/piter/articles/352978/
+ 
+Apache Kafka: погружение на 45 минут
+https://www.youtube.com/watch?v=V5t_3RxBals&ab_channel=UWDC
+
+работа с Kafka в Go: практическое применение
+https://habr.com/ru/articles/894056/
+
+Лучший Гайд по Kafka для Начинающих За 1 Час
+https://www.youtube.com/watch?v=hbseyn-CfXY&ab_channel=VladMishustin
+
+Building a Kafka Producer and Consumer in Go
+https://blog.indalyadav.com/building-a-kafka-producer-and-consumer-in-go
+How to Build a Real-Time Notification System with Go and Kafka
+https://www.freecodecamp.org/news/build-a-real-time-notification-system-with-go-and-kafka/#heading-lets-test-the-real-time-notification-system
