--- a/micro/REST API design.org
+++ b/micro/REST API design.org
@@ -1,7 +1,7 @@
 #+title: Как проектировать REST API: полезные советы для разработчика
 
 #+ATTR_ORG: :width 700 :align left
-[[file:./pic/2.png]]
+[[file:../att/2.png]]
 
 1. Используйте существительные во множественном числе для обозначения коллекций.
 =Хорошо=
