--- a/queue/Что такое RabbitMQ.org
+++ b/queue/Что такое RabbitMQ.org
@@ -35,7 +35,7 @@ RabbitMQ основан на протоколе AMQP (Advanced Message Queuing P
 Среди прочих свойств, RabbitMQ часто приписывают свойство «проталкивать» сообщения потребителю. Для этого потребителю необходимо установить соединение, в рамках которого открывается канал взаимодействия и осуществляется транспортировка сообщений. Потребитель должен быть подписан на текущую очередь — это необходимое условие для доставки из неё.
 
 * Базовая схема всех сущностей RabbitMQ
-[[file:./pic/1.png]]
+[[file:../att/queue1.png]]
 
 Пробежимся по названиям слева направо:
  - =Publisher= — публикует сообщения в Rabbit.
