--- a/План.md
+++ b/План.md
@@ -72,12 +72,9 @@ https://habr.com/ru/articles/770564/
 
 
 
-Как создать свой реестр для хостинга Docker-контейнеров
-https://proglib.io/p/kak-sozdat-svoy-reestr-dlya-hostinga-docker-konteynerov-2024-10-22
-https://my-js.org/docs/guide/docker/#рекомендации-по-инструкциям
-https://golang.withcodeexample.com/blog/go-app-deployment-docker-guide
+20X Faster Golang Docker Builds
 https://dev.to/jacktt/20x-faster-golang-docker-builds-289n
-https://dev.to/tusharops_29/docker-networking-basics-network-types-examples-5ed7
+Containerizing a Go Web Application with Docker
 https://helloabhii.hashnode.dev/containerizing-a-go-web-application-with-docker
 
 How to Deploy Go Applications With Docker
